RESOLVED FIXED267627
REGRESSION(272776@main): [GStreamer][Debug] ASSERTION FAILED: m_streamFormat in MockRealtimeAudioSourceGStreamer::render()
https://bugs.webkit.org/show_bug.cgi?id=267627
Summary REGRESSION(272776@main): [GStreamer][Debug] ASSERTION FAILED: m_streamFormat ...
Vitaly Dyackhov
Reported 2024-01-17 01:38:17 PST
Test crashing: fast/mediastream/media-stream-renders-first-frame.html Stack trace: #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:333 #1 0x00007fccbb09e010 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Assertions.h:778 #2 0x00007fccc3946e46 in WebCore::MockRealtimeAudioSourceGStreamer::render(WTF::Seconds) (this=0x7fcc9f261a20, delta=...) at /app/webkit/Source/WebCore/platform/mediastream/gstreamer/MockRealtimeAudioSourceGStreamer.cpp:147 #3 0x00007fccc3962b68 in operator()() const (__closure=0x7fcc9f425de8) at /app/webkit/Source/WebCore/platform/mock/MockRealtimeAudioSource.cpp:183 #4 0x00007fccc3966530 in WTF::Detail::CallableWrapper<WebCore::MockRealtimeAudioSource::tick()::<lambda()>, void>::call(void) (this=0x7fcc9f425de0) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #5 0x00007fccbbaa6485 in WTF::Function<void ()>::operator()() const (this=0x7fcc9f425e10) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #6 0x00007fccbefffb5a in operator()() const (__closure=0x7fcc9f425e08) at /app/webkit/Source/WTF/wtf/generic/WorkQueueGeneric.cpp:68 #7 0x00007fccbf001a34 in WTF::Detail::CallableWrapper<WTF::WorkQueueBase::dispatch(WTF::Function<void()>&&)::<lambda()>, void>::call(void) (this=0x7fcc9f425e00) at /app/webkit/Source/WTF/wtf/Function.h:53 #8 0x00007fccbbaa6485 in WTF::Function<void ()>::operator()() const (this=0x7fc9977fd880) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #9 0x00007fccbef48ef7 in WTF::RunLoop::performWork() (this=0x7fcc9f2dc0c0) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:147 #10 0x00007fccbf003874 in operator()(gpointer) const (__closure=0x0, userData=0x7fcc9f2dc0c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:80 #11 0x00007fccbf003898 in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:82 #12 0x00007fccbf003807 in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x7fc9c0000ca0, callback=0x7fccbf00387b <_FUN(gpointer)>, userData=0x7fcc9f2dc0c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #13 0x00007fccbf003855 in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56 #14 0x00007fccb04bcd36 in g_main_dispatch (context=0x7fc9c00055f0) at ../glib/gmain.c:3460 #15 g_main_context_dispatch (context=0x7fc9c00055f0) at ../glib/gmain.c:4200 #16 0x00007fccb051a2b8 in g_main_context_iterate.isra.0 (context=0x7fc9c00055f0, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4276 #17 0x00007fccb04bc3ff in g_main_loop_run (loop=0x7fc9c0007ab0) at ../glib/gmain.c:4479 #18 0x00007fccbf003ec8 in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #19 0x00007fccbef48c8b in operator()() const (__closure=0x7fcc9f52b808) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:114 #20 0x00007fccbef4a398 in WTF::Detail::CallableWrapper<WTF::RunLoop::create(char const*, WTF::ThreadType, WTF::Thread::QOS)::<lambda()>, void>::call(void) (this=0x7fcc9f52b800) at /app/webkit/Source/WTF/wtf/Function.h:53 #21 0x00007fccbbaa6485 in WTF::Function<void ()>::operator()() const (this=0x7fc9977fdb80) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #22 0x00007fccbef52c33 in WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) (newThreadContext=0x7fcc9f2bb290) at /app/webkit/Source/WTF/wtf/Threading.cpp:258 #23 0x00007fccbf011c29 in WTF::wtfThreadEntryPoint(void*) (context=0x7fcc9f2bb290) at /app/webkit/Source/WTF/wtf/posix/ThreadingPOSIX.cpp:243 #24 0x00007fccafd5be39 in start_thread (arg=<optimized out>) at pthread_create.c:444 #25 0x00007fccafde38c4 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:100
Attachments
Vitaly Dyackhov
Comment 1 2024-01-17 01:44:36 PST
Philippe Normand
Comment 2 2024-01-17 01:45:23 PST
EWS
Comment 3 2024-01-17 01:49:07 PST
Test gardening commit 273121@main (90554827561f): <https://commits.webkit.org/273121@main> Reviewed commits have been landed. Closing PR #22858 and removing active labels.
EWS
Comment 4 2024-01-19 00:17:47 PST
Committed 273214@main (6f5ada25d26e): <https://commits.webkit.org/273214@main> Reviewed commits have been landed. Closing PR #22859 and removing active labels.
Radar WebKit Bug Importer
Comment 5 2024-01-19 00:18:15 PST
Note You need to log in before you can comment on or make changes to this bug.