REGRESSION(272776@main): [GStreamer][Debug] ASSERTION FAILED: m_streamFormat in MockRealtimeAudioSourceGStreamer::render() https://bugs.webkit.org/show_bug.cgi?id=267627

Reviewed by Xabier Rodriguez-Calvar.

Prevent an ASSERT in the mock audio source, that would happen in case the source is stopped while
rendering.

* Source/WebCore/platform/mediastream/gstreamer/MockRealtimeAudioSourceGStreamer.cpp:
(WebCore::MockRealtimeAudioSourceGStreamer::render):

Canonical link: https://commits.webkit.org/273214@main